works fully but need refactor

--- a/style.css
+++ b/style.css
@@ -165,6 +165,12 @@ button {
     stroke-width: 2;
 }
 
+.mean{
+    fill: none;
+    stroke: red;
+    stroke-width: 2;
+}
+
 .dot {
   fill: #fff;
   stroke: steelblue;
